tdf#105348 add check for divide by zero situation.

Change-Id: I339997870a7983d829a8909d2b3da7b3ab03f58d